<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="FeedbackStewart" Id="{dbe9f13a-90b3-482d-a35b-3c357fc25569}">
    <Declaration><![CDATA[TYPE FeedbackStewart :
STRUCT
	surge : REAL;
	sway : REAL;
	heave : REAL;
	phi : REAL;
	theta : REAL;
	psi	: REAL;
	surge_t	: REAL;
	sway_t	: REAL;
	heave_t	: REAL;
	phi_t : REAL;
	theta_t : REAL;
	psi_t : REAL;
	surge_tt : REAL;
	sway_tt : REAL;
	heave_tt : REAL;
	phi_tt : REAL;
	theta_tt : REAL;
	psi_tt : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>